[package]
name = "gitdiffparser"
version = "0.1.0"
description = "Parse git diff outputs"
authors = ["Adolfo Silva <code@adolfosilva.org"]
repository = "https://github.com/adolfosilva/gitdiffparser"
license = "MIT"
readme = "README.md"
keywords = ["git", "diff", "parsing"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
regex = "1.6.0"
